# cc

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  cc.config.json  main.cpp  start_codex.ps1
cc/: CMakeLists.txt
cc/generate/: embedded_templates.cpp  embedded_templates.h  generator.cpp  generator.h  script_parser_data.cpp  script_parser_data.h
cc/lex/: dfa_builder.cpp  dfa_builder.h  dfa_minimizer.cpp  dfa_setter.h  nfa.cpp  nfa.h  nfa_node.cpp  nfa_node.h  nfa_regex_parser.cpp  nfa_regex_parser.h
cc/syntax/: lalr_parser.cpp  lalr_parser.h  language_setter.h  production.h  syntax.cpp
cmake/: stupidcoderConfig.cmake.in
common/: CMakeLists.txt
common/compile/: compile_error.cpp  compile_error.h  compiler_input.cpp  compiler_input.h  lexer.cpp  lexer.h  parser.cpp  parser.h
common/io/: abstract_input.cpp  abstract_input.h  buffered_input.cpp  buffered_input.h  console_byte_reader.cpp  console_byte_reader.h  stream_byte_reader.cpp  stream_byte_reader.h  string_input.cpp  string_input.h
common/util/: print_util.cpp  print_util.h
examples/: CMakeLists.txt  caculator.txt  scriptloader.txt
examples/calculator/: CMakeLists.txt  calculator_core.cpp  calculator_core.h  cc.config.json.in  generate_config.cmake.in  lang.txt  main.cpp
obsidian/: 总览.md
obsidian/第1章 正则表达式构造NFA/: 1.1 NFANode.md  1.2 NFA.md  1.3 NFARegexParser.md  章节总览.md
obsidian/第1章 词法分析引擎/: 1.1 配置C++和gtest.md  1.2 NFANode.md  1.3 NFA.md  1.4 NFARegexParser.md  章节总览.md
obsidian/第2章 NFA到DFA转换/: 2.1 BitsetHash.md  2.2 字符类映射.md  2.3 Epsilon闭包与字符类掩码.md  2.4 子集构造法.md  2.5 DFA最小化.md  2.6 DFASetter与集成测试.md  章节总览.md
obsidian/第2章 构造DFA/: 2.1 BitsetHash.md  2.2 字符类映射.md  2.3 Epsilon闭包与字符类掩码.md  2.4 子集构造法.md  2.5 DFA最小化.md  2.6 DFASetter与集成测试.md  章节总览.md
obsidian/第3章 LALR语法分析/: 3.0 Symbol与Production.md  3.1 Syntax文法存储.md  3.2 FIRST集计算.md  3.3 LR(0)闭包与GOTO.md  3.4 LR(0)项集族构建.md  3.5 LALR合并与FOLLOW集.md  3.6 前瞻符传播.md  3.7 分析表与冲突处理.md  3.8 LanguageSetter与Parse运行时.md  章节总览.md
obsidian/第3章 文法与LALR语法分析/: 3.0 Symbol与Production.md  3.1 Syntax文法存储.md  3.2 FIRST集计算.md  3.3 LR(0)闭包与GOTO.md  3.4 LR(0)项集族构建.md  3.5 LALR合并与FOLLOW集.md  3.6 前瞻符传播.md  3.7 分析表与冲突处理.md  章节总览.md
obsidian/第4章 通用词法分析器/: 4.1 Token体系与数据接口.md  4.2 Lexer词法驱动.md  章节总览.md
obsidian/第5章 通用语法分析器/: 5.1 ParserDataSupplier接口.md  5.2 Parser栈式驱动.md  章节总览.md
obsidian/第6章 编译器生成器/: 6.1 ScriptParserData.md  6.2 ScriptLexerData.md  6.3 Generator代码生成器.md  章节总览.md
prompt/: GenChapter.md  InitGame.md
src/: CMakeLists.txt  test.cpp  test.h
src/common/: CMakeLists.txt  cc_constants.h
src/common/compile/: compile_error.cpp  compile_error.h  compiler_input.cpp  compiler_input.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/common/io/: abstract_input.cpp  abstract_input.h  buffered_input.cpp  buffered_input.h  byte_reader.h  file_byte_reader.cpp  file_byte_reader.h  string_byte_reader.cpp  string_byte_reader.h  string_input.cpp  string_input.h
src/common/util/: print_util.cpp  print_util.h
src/generate/: script_parser_data.cpp  script_parser_data.h
src/io/: abstract_input.cpp  abstract_input.h  buffered_input.cpp  buffered_input.h  byte_reader.h  string_byte_reader.cpp  string_byte_reader.h  string_input.cpp  string_input.h
src/lex/: default_dfa_setter.cpp  default_dfa_setter.h  dfa_builder.cpp  dfa_builder.h  dfa_minimizer.cpp  dfa_minimizer.h  dfa_setter.h  nfa.cpp  nfa.h  nfa_node.cpp  nfa_node.h  nfa_regex_parser.cpp  nfa_regex_parser.h
src/syntax/: lalr_conflict_handler.cpp  lalr_conflict_handler.h  lalr_parser.cpp  lalr_parser.h  language_setter.h  production.cpp  production.h  syntax.cpp  syntax.h
src/util/: bitset_hash.h
templates/: CMakeLists.txt  embedded_templates.cpp  embedded_templates.h  parser_data.cpp.txt  parser_data.h.txt
test/: CMakeLists.txt  dfa_builder_test.cpp  test_gtest.cpp  test_nfa.cpp
test/common/compile/: lexer_test.cpp  lexer_test.txt  parser_test.cpp  script_loader_end_to_end_test.cpp  scriptloader.txt  scriptloader_dump_test.cpp
test/common/io/: stream_byte_reader_test.cpp
test/generate/: generator_test.cpp
test/lex/: dfa_builder_build_char_class_map_test.cpp  dfa_builder_build_dfa_test.cpp  dfa_builder_epsilon_closure_test.cpp  dfa_builder_minimize_dfa_test.cpp  dfa_builder_next_test.cpp  dfa_builder_test.cpp  nfa_regex_parser_test.cpp
test/syntax/: lalr_parser_canonical_test.cpp  lalr_parser_compute_first_test.cpp  lalr_parser_follow_test.cpp  lalr_parser_lalr_merge_test.cpp  lalr_parser_lookahead_test.cpp  lalr_parser_lr0_test.cpp  lalr_parser_parse_test.cpp  lalr_parser_parsing_table_test.cpp  syntax_test.cpp
